--- a/reading.html
+++ b/reading.html
@@ -17,6 +17,11 @@
     .back { width: fit-content; font-size: .95rem; opacity: .85; }
     h1 { font-size:1.6rem; margin:.25rem 0 0; }
 
+    .intro {
+      max-width: 40rem;
+      opacity: .85;
+    }
+
     .yearnav { font-variant-numeric: tabular-nums; opacity:.9; }
     .year { margin:2rem 0 .5rem; font-size:1.2rem; letter-spacing:.02em; }
 
@@ -52,10 +57,11 @@
     <header>
       <a class="back" href="index.html">&#8592; Home</a>
       <h1>Reading</h1>
+      <p class="intro">
+        Here's what I'm reading / have read within the past 2 years, along with the date of completion.
+      </p>
       <div class="yearnav">Jump: <a href="#y2026">2026</a> · <a href="#y2025">2025</a> · <a href="#y2024">2024</a></div>
     </header>
-
-    <!-- Most recent to oldest as you scroll -->
 
     <h2 class="year" id="y2026">2026</h2>
 
@@ -175,7 +181,7 @@
       <div class="when">Feb 12, 2025</div>
       <div>
         <div class="title">
-          <a href="https://www.goodreads.com/book/show/6748" target="_blank" rel="noopener noreferrer"><em>A Supposedly Fun Thing I&#39;ll Never Do Again: Essays and Arguments</em></a>
+          <a href="https://www.goodreads.com/book/show/6748" target="_blank" rel="noopener noreferrer"><em>A Supposedly Fun Thing I'll Never Do Again: Essays and Arguments</em></a>
         </div>
         <div class="author">David Foster Wallace</div>
       </div>
