--- a/writing.html
+++ b/writing.html
@@ -127,6 +127,9 @@
       <div class="author">Ryan P.</div>
 
       <pre>
+Life Without the Piano
+Ryan P. 
+
 I like to think of who I’d be 
 If in the whiteness of the clouds
 A Steinway, carved from ivory
@@ -137,7 +140,7 @@ Or chose the angel undersea
 Or if my morals I betrayed
 That Steinway would fall onto me
 
-A wind would burden pregnant skies
+A wind would burden heavy skies
 Would stir the rains and pallid day
 And tipping off its fulcrum high
 It screamed across the airs, away
@@ -155,17 +158,17 @@ Of sharps and flats among the briars
 They’d find me flattened underneath
 My yellowed bones among the white
 With keys supplanting all my teeth
-And tuning pegs eclipsing sight
+And pinblocks to eclipse my sight
 
 O what a righteous man I’d be
-If every second of the day
-I understood the death of me
+If every moment of the day
+I understood the end of me
 Was just one wrongful deed away
 
 Then nothing would my morals taint
 And upright everywhere I’d go
 They’d hail me as the greatest saint
-The purest man they’d ever know
+The purest man they’d ever known
 
 But no such instrument exists
 So I don’t have to change a thing
@@ -388,3 +391,4 @@ And fill the heavy silence
   </div>
 </body>
 </html>
+
