--- a/writing.html
+++ b/writing.html
@@ -172,7 +172,7 @@ The purest man they’d ever known
 
 But no such instrument exists
 So I don’t have to change a thing
-I’ll pick whatever way I want
+I’ll pick whatever way I wish
 And stick to merely wondering
       </pre>
     </section>
@@ -391,4 +391,5 @@ And fill the heavy silence
   </div>
 </body>
 </html>
+
 
